package pl.krystian.businesspartnermatching.common.money;



public enum CurrencyCode {

    PLN,
    EUR,
    USD
}