package pl.krystian.businesspartnermatching.need;

public enum CooperationType {

    SUBCONTRACTING,
    SUPPLY,
    DISTRIBUTION,
    OUTSOURCING,
    CONSULTING,
    TECHNOLOGY_PARTNERSHIP,
    JOINT_PROJECT
}