CREATE TABLE industries
(
    id     BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    active BOOLEAN                                 NOT NULL,
    code   VARCHAR(50)                             NOT NULL,
    name   VARCHAR(150)                            NOT NULL,
    CONSTRAINT pk_industries PRIMARY KEY (id),
    CONSTRAINT uk_industries_code UNIQUE (code),
    CONSTRAINT uk_industries_name UNIQUE (name)
);

CREATE TABLE specializations
(
    id          BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    active      BOOLEAN                                 NOT NULL,
    code        VARCHAR(80)                             NOT NULL,
    name        VARCHAR(150)                            NOT NULL,
    industry_id BIGINT                                  NOT NULL,
    CONSTRAINT pk_specializations PRIMARY KEY (id),
    CONSTRAINT uk_specializations_code UNIQUE (code),
    CONSTRAINT uk_specializations_industry_name UNIQUE (industry_id, name),
    CONSTRAINT fk_specializations_industry
        FOREIGN KEY (industry_id)
            REFERENCES industries (id)
);

CREATE TABLE companies
(
    id             BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    active         BOOLEAN                                 NOT NULL,
    name           VARCHAR(255)                            NOT NULL,
    description    TEXT,
    industry_id    BIGINT                                  NOT NULL,
    country        VARCHAR(100)                            NOT NULL,
    city           VARCHAR(150)                            NOT NULL,
    latitude       DECIMAL(9, 6)                           NOT NULL,
    longitude      DECIMAL(9, 6)                           NOT NULL,
    established_at DATE,
    capabilities   TEXT,
    CONSTRAINT pk_companies PRIMARY KEY (id),
    CONSTRAINT fk_companies_industry
        FOREIGN KEY (industry_id)
            REFERENCES industries (id)
);

CREATE TABLE company_specializations
(
    company_id        BIGINT NOT NULL,
    specialization_id BIGINT NOT NULL,
    CONSTRAINT pk_company_specializations
        PRIMARY KEY (company_id, specialization_id),
    CONSTRAINT fk_company_specializations_company
        FOREIGN KEY (company_id)
            REFERENCES companies (id),
    CONSTRAINT fk_company_specializations_specialization
        FOREIGN KEY (specialization_id)
            REFERENCES specializations (id)
);

CREATE TABLE business_needs
(
    id                           BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    created_at                   TIMESTAMP(6) WITHOUT TIME ZONE          NOT NULL,
    updated_at                   TIMESTAMP(6) WITHOUT TIME ZONE          NOT NULL,
    active                       BOOLEAN                                 NOT NULL,
    company_id                   BIGINT                                  NOT NULL,
    title                        VARCHAR(150)                            NOT NULL,
    description                  VARCHAR(2000),
    cooperation_type             VARCHAR(50)                             NOT NULL,
    max_distance_km              INTEGER,
    min_partner_experience_years INTEGER,
    max_partners                 INTEGER                                 NOT NULL,
    budget_min                   DECIMAL(15, 2),
    budget_max                   DECIMAL(15, 2),
    budget_currency              VARCHAR(3),
    required_from                DATE,
    required_until               DATE,
    CONSTRAINT pk_business_needs PRIMARY KEY (id),
    CONSTRAINT fk_business_needs_company
        FOREIGN KEY (company_id)
            REFERENCES companies (id)
);

CREATE TABLE business_need_required_specializations
(
    business_need_id  BIGINT NOT NULL,
    specialization_id BIGINT NOT NULL,
    CONSTRAINT pk_business_need_required_specializations
        PRIMARY KEY (business_need_id, specialization_id),
    CONSTRAINT fk_business_need_required_specializations_need
        FOREIGN KEY (business_need_id)
            REFERENCES business_needs (id),
    CONSTRAINT fk_business_need_required_specializations_specialization
        FOREIGN KEY (specialization_id)
            REFERENCES specializations (id)
);

CREATE TABLE business_offers
(
    id                BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    created_at        TIMESTAMP(6) WITHOUT TIME ZONE          NOT NULL,
    updated_at        TIMESTAMP(6) WITHOUT TIME ZONE          NOT NULL,
    active            BOOLEAN                                 NOT NULL,
    company_id        BIGINT                                  NOT NULL,
    title             VARCHAR(150)                            NOT NULL,
    description       VARCHAR(2000),
    cooperation_type  VARCHAR(50)                             NOT NULL,
    service_radius_km INTEGER,
    experience_years  INTEGER,
    max_partners      INTEGER                                 NOT NULL,
    price_min         DECIMAL(15, 2),
    price_max         DECIMAL(15, 2),
    price_currency    VARCHAR(3),
    available_from    DATE,
    available_until   DATE,
    CONSTRAINT pk_business_offers PRIMARY KEY (id),
    CONSTRAINT fk_business_offers_company
        FOREIGN KEY (company_id)
            REFERENCES companies (id)
);

CREATE TABLE business_offer_offered_specializations
(
    business_offer_id BIGINT NOT NULL,
    specialization_id BIGINT NOT NULL,
    CONSTRAINT pk_business_offer_offered_specializations
        PRIMARY KEY (business_offer_id, specialization_id),
    CONSTRAINT fk_business_offer_offered_specializations_offer
        FOREIGN KEY (business_offer_id)
            REFERENCES business_offers (id),
    CONSTRAINT fk_business_offer_offered_specializations_specialization
        FOREIGN KEY (specialization_id)
            REFERENCES specializations (id)
);
