@startuml
title Backend - model domenowy
!pragma layout smetana
skinparam classAttributeIconSize 0

class Company {
  id
  name
}

class BusinessNeed {
  id
  maxPartners
  ahpComparisonsJson
}

class BusinessOffer {
  id
  maxPartners
  ahpComparisonsJson
}

class Specialization {
  id
  name
}

class Industry {
  id
  name
}

enum CooperationType
enum CurrencyCode

Company "1" <-- "0..*" BusinessNeed : owns
Company "1" <-- "0..*" BusinessOffer : owns
BusinessNeed "0..*" -- "0..*" Specialization
BusinessOffer "0..*" -- "0..*" Specialization
Industry "1" <-- "0..*" Specialization
BusinessNeed --> CooperationType
BusinessOffer --> CooperationType
BusinessNeed --> CurrencyCode
BusinessOffer --> CurrencyCode

note right of BusinessNeed
  AHP comparisons are optional.
  Null means default weights.
end note
@enduml
